Minor fixes (#24)
* Implemented player execution

* Fixed bug

* Implemented loyalty investigation

* Implemented election tracker

* Improved policy draws

* Implemented special election

* Implemented minor bug fixes

* Implemented minor bug fixes

* Cleaned up code and added documentation.

* Implemented Redis config.

* Updated documentation

* Updated documentation